--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,18 @@ body {
 .icons i {
   cursor: pointer;
 }
+
+.icon {
+  position: absolute;
+  right: 1rem;
+}
+
+.icon i {
+  font-size: 1.5rem;
+  cursor: pointer;
+  margin: 1rem 0;
+}
+
+.accordion-button::after {
+  filter: invert(1);
+}
